--- a/requirements.txt
+++ b/requirements.txt
@@ -13,6 +13,9 @@ bleach==6.1.0
 certifi==2023.7.22
 cffi==1.16.0
 charset-normalizer==3.3.0
+click==8.1.7
+click-plugins==1.1.1
+cligj==0.7.2
 comm==0.1.4
 contourpy==1.1.1
 cycler==0.12.1
@@ -21,8 +24,10 @@ decorator==5.1.1
 defusedxml==0.7.1
 executing==2.0.0
 fastjsonschema==2.18.1
+fiona==1.9.5
 fonttools==4.43.1
 fqdn==1.5.1
+geopandas==0.14.0
 html5lib==1.1
 idna==3.4
 ipykernel==6.25.2
@@ -79,6 +84,7 @@ pure-eval==0.2.2
 pycparser==2.21
 Pygments==2.16.1
 pyparsing==3.1.1
+pyproj==3.6.1
 python-dateutil==2.8.2
 python-json-logger==2.0.7
 pytz==2023.3.post1
@@ -93,6 +99,7 @@ rfc3986-validator==0.1.1
 rpds-py==0.10.6
 seaborn==0.13.0
 Send2Trash==1.8.2
+shapely==2.0.2
 simplejson==3.19.2
 six==1.16.0
 sniffio==1.3.0
